--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
             <form id="form" action="dialog">
                 <div class="form-row">
                     <label for="title"></label>
-                    <input type="text" id="title" placeholder="title" minlength="1" required>
+                    <input type="text" id="title" placeholder="title" minlength="1" maxlength="50" required>
                 </div>
                 <div id="project-specific">
                     <div class="form-row">
@@ -54,7 +54,7 @@
                 <div id="task-specific">
                     <div class="form-row">
                         <label for="description"></label>
-                        <textarea id="description" placeholder="description" rows="3" cols="50"></textarea>
+                        <textarea id="description" placeholder="description" rows="3" cols="50" maxlength="150"></textarea>
                     </div>
                     <div class="form-row">
                         <div>
