Close task details modal on outside click

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,10 @@
         <button class="addTaskButton">+ add task</button>
     </main>
 
-    <dialog>
+    <div class="task-details hidden"></div>
+    <div class="overlay hidden"></div>
+
+    <dialog class="modal">
         <div id="modal">
             <div id="modal-header"></div>
             <form id="form" action="dialog">
